Fix footer spacing

--- a/css/main.css
+++ b/css/main.css
@@ -157,6 +157,10 @@ h1 {
     padding-right: 0.5em;
 }
 
+footer {
+    padding: 1rem;
+}
+
 .footer_block {
     padding-bottom: 2em;
 }
